Fixed responsive issues and padding when wrapped

--- a/localWeather/style.css
+++ b/localWeather/style.css
@@ -21,9 +21,3 @@ li {
 #query {
     width: 300px;
 }
-
-@media (min-width: 1200px) {
-    .container{
-        max-width: 970px;
-    }
-}
